html should print to pdf now

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
            height: 100%;
            }
            .wrapper {
-           background-color: #5F64D3;
+           background-color: #E6E1C3;
            padding-top: 100px;
            }
            body {
            background-color: white;
            -webkit-print-color-adjust: exact !important;
-           font-family: sans-serif;
+           font-family: helvetica, sans-serif;
            }
            main {
            background-color: #E9EDEE;
@@ -67,8 +67,8 @@
            display: flex;
            justify-content: center;
            flex-wrap: wrap;
-           background-color: #26175A;
-           color: white;
+           background-color: rgb(28, 204, 37);
+           color: black;
            padding: 10px;
            width: 95%;
            border-radius: 6px;
@@ -81,7 +81,7 @@
            margin-top: -75px;
            margin: 0 auto;
            display: block;
-           border: 6px solid #73448C;
+           border: 6px solid black;
            box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
            }
            .photo-header h1, .photo-header h2 {
@@ -124,8 +124,8 @@
            .card {
              padding: 20px;
              border-radius: 6px;
-             background-color: #26175A;
-             color: white;
+             background-color: rgb(28, 204, 37);
+             color: black;
              margin: 20px;
            }
            
@@ -163,14 +163,14 @@
   <body>
     <div class="wrapper">
       <div class="photo-header">
-          <img src="https://i.imgur.com/kLze48R.jpg" />
-          <h1>Hello!</h1>
-          <h1>My name is Chris Wood</h1>
-          <h4 style="text-align:center;">Currently at Indigo Wild</h4>
+          <img src="https://avatars2.githubusercontent.com/u/56177334?v=4" />
+          <h1>Hi!</h1>
+          <h1>My name is Christopher Wood!</h1>
+          <h4 style="text-align:center;">Currently @ KU Coding Bootcamp</h4>
         <div class="links-nav">
-          <a class="nav-link" href="http://maps.google.com/?q=Kansas City, Missouri" target="_blank"><i class="fas fa-location-arrow"></i> Kansas City, MO</a>
+          <a class="nav-link" href="http://maps.google.com/?q=Kansas City MO" target="_blank"><i class="fas fa-location-arrow"></i> Kansas City MO</a>
           <a class="nav-link" href="https://github.com/Werewolfflanders" target="_blank"><i class="fab fa-github"></i> Github</a>
-        
+          <a class="nav-link" href="https://werewolfflanders.github.io/homework-1/" target="_blank"><i class="fas fa-rss"></i> Blog</a>
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@
     <div class="main">
         <div class="container">
         <h2 style="text-align: center;">
-            Student at KU Edward's Campus
+            I'm a coding beginner looking to expand my knowledge and skills in the field. 
         </h2>
             <div class="row">
                 <div class="col">
@@ -186,13 +186,13 @@
                     <h2>
                     Repositories
                     </h2>
-                    <h3>15</h3>
+                    <h3>23</h3>
                 </div>
                 <div class="card">
                     <h2>
                     Followers
                     </h2>
-                    <h3>1</h3>
+                    <h3>3</h3>
                 </div>
                 </div>
                 <div class="col">
@@ -206,7 +206,7 @@
                     <h2>
                     Following
                     </h2>
-                    <h3>1</h3>
+                    <h3>3</h3>
                 </div>
                 </div>
             </div>
